welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:17: error: type mismatch;
 found   : Unit
 required: String
		if ( day==0 || day==6 ) {
                ^alarmClock:13: error: type mismatch;
 found   : Unit
 required: String
	if (vacation==true) {		
        ^